--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,6 @@ Description: Bioinformatic application for nontarget analysis in lipidomics.
 License: GPL (>= 3)
 Encoding: UTF-8
 biocViews:
-Imports: 
-    MSnbase,
-    Rcpp
 LinkingTo: Rcpp
 Suggests: 
     rmarkdown,
@@ -24,3 +21,11 @@ Suggests:
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
+Imports: 
+    xcms,
+    Rcpp,
+    BiocParallel,
+    MSnbase,
+    doSNOW,
+    foreach,
+    iterators
