--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,6 @@
 
 export(convert_files)
 export(hello_world)
-export(peakpicking)
+export(ms_process)
 importFrom(Rcpp,sourceCpp)
 useDynLib(workflow.lipido)
