--- a/workflow.lipido/NAMESPACE
+++ b/workflow.lipido/NAMESPACE
@@ -3,6 +3,8 @@
 export(export_annotations)
 export(ms_process)
 export(plot_annotation_ms)
+export(plot_eic)
+export(plot_heatmap)
 export(run_shiny_app)
 importFrom(Rcpp,sourceCpp)
 useDynLib(workflow.lipido)
