add tests for the precedent commit

--- a/SPRING/NAMESPACE
+++ b/SPRING/NAMESPACE
@@ -6,6 +6,7 @@ export(export_annotations)
 export(get_available_database)
 export(ms_process)
 export(plot_annotation_ms)
+export(plot_db_eic)
 export(plot_eic)
 export(plot_eic_mzdev)
 export(plot_heatmap)
