--- a/SPRING/NAMESPACE
+++ b/SPRING/NAMESPACE
@@ -10,8 +10,8 @@ export(plot_db_eic)
 export(plot_eic)
 export(plot_eic_mzdev)
 export(plot_heatmap)
-export(plot_ms_map)
 export(plot_mzdev)
+export(plot_peak_spot)
 export(run_shiny_app)
 importFrom(Rcpp,sourceCpp)
 useDynLib(SPRING)
