--- a/SPRING/NAMESPACE
+++ b/SPRING/NAMESPACE
@@ -9,6 +9,7 @@ export(plot_annotation_ms)
 export(plot_eic)
 export(plot_peak_spot)
 export(plot_raw_tic)
+export(reintegrate_ann)
 export(run_shiny_app)
 importFrom(Rcpp,sourceCpp)
 useDynLib(SPRING)
